// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`VixSrc Black Mirror 1`] = `
[
  {
    "format": "hls",
    "label": "VixSrc",
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "it",
      ],
      "extractorId": "vixsrc",
      "height": 1080,
    },
    "ttl": 21600000,
    "url": "https://vixsrc.to/playlist/307316.m3u8?token=24e90aee37b45f8342b1732873c2cff5&expires=1781601503&h=1",
  },
]
`;

exports[`VixSrc Black Mirror is excluded if no matching language was found 1`] = `[]`;

exports[`VixSrc Full Metal Jacket 1`] = `
[
  {
    "format": "hls",
    "label": "VixSrc",
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "it",
      ],
      "extractorId": "vixsrc",
      "height": 1080,
    },
    "ttl": 21600000,
    "url": "https://vixsrc.to/playlist/219736.m3u8?token=addd13e02cfbc758c81857ab27ac24cc&expires=1781601502&h=1",
  },
]
`;

exports[`VixSrc Full Metal Jacket via MediaFlow Proxy 1`] = `
[
  {
    "format": "hls",
    "label": "VixSrc",
    "meta": {
      "countryCodes": [
        "multi",
      ],
      "extractorId": "vixsrc",
      "height": 1080,
    },
    "notWebReady": false,
    "ttl": 21600000,
    "url": "https://mediaflow.test.org/extractor/video?host=VixCloud&api_password=test&d=https%3A%2F%2Fvixsrc.to%2Fmovie%2F600&h_referer=https%3A%2F%2Fvixsrc.to%2F&h_user-agent=Mozilla%2F5.0+%28Windows+NT+10.0%3B+Win64%3B+x64%29+AppleWebKit%2F537.36+%28KHTML%2C+like+Gecko%29+Chrome%2F124.0.0.0+Safari%2F537.36&redirect_stream=true",
  },
]
`;

exports[`VixSrc Rental Family 1`] = `
[
  {
    "format": "hls",
    "label": "VixSrc",
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "it",
      ],
      "extractorId": "vixsrc",
      "height": 1080,
    },
    "ttl": 21600000,
    "url": "https://vixsrc.to/playlist/671823.m3u8?token=0e7930feff9e7c5086ab4b90173cb9c7&expires=1781601504&h=1",
  },
]
`;
